added mood board images and color list

--- a/attire.html
+++ b/attire.html
@@ -140,14 +140,23 @@
         <section
           class="max-w-6xl mx-auto px-6 mb-32 grid grid-cols-1 md:grid-cols-2 gap-12 items-center"
         >
-          <div class="rounded-xl overflow-hidden shadow-2xl h-[320px] md:h-[500px] relative">
-            <div
-              class="absolute inset-0 bg-cover bg-center transition-transform hover:scale-105 duration-700"
-              data-alt="Elegant spring wedding guests in pastel colors"
-              style="
-                background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuCr1pbnp6jIE-D02dJ6aV98KRVy1vNqjuLSVV_UMOsKGPk9HQbNm6P2SOOl-a3oomXuAolgz-yJtzeGHVn-rwbkB0X45h273zJ729ZkkIlYa0GQs7WDjaNhCWy3Omub1DTffPKCYHTEARbFLCUT-1LKdUdBEz9TULcIMwHNDqmfYfYIwfFjYVCMJJpapArNONmwG8UbK_Z2mKdaap4JdE4TF5g3ocHipNOQDEhAvRQMX6CO77a-wbfUBrkvD3AqzoxHB4bspnugTaEa');
-              "
-            ></div>
+          <div class="w-full max-w-[420px] md:max-w-[420px] mx-auto aspect-[3/4] rounded-xl overflow-hidden shadow-2xl relative group">
+            <div class="absolute inset-0 overflow-hidden">
+              <div id="attire-carousel-track" class="flex h-full w-full transition-transform duration-500 ease-out">
+                <div class="attire-carousel-slide min-w-full h-full flex-shrink-0 bg-contain bg-center bg-no-repeat cursor-pointer" style="background-image: url('Assets/Mood/mood_soft_spring_luxe.jpg');" data-lightbox-src="Assets/Mood/mood_soft_spring_luxe.jpg" role="img" aria-label="Soft Spring Luxe mood – click to view full size"></div>
+                <div class="attire-carousel-slide min-w-full h-full flex-shrink-0 bg-contain bg-center bg-no-repeat cursor-pointer" style="background-image: url('Assets/Mood/mood_spring_bright.jpg');" data-lightbox-src="Assets/Mood/mood_spring_bright.jpg" role="img" aria-label="Spring Bright mood – click to view full size"></div>
+              </div>
+            </div>
+            <button type="button" id="attire-carousel-prev" class="absolute left-3 top-1/2 -translate-y-1/2 w-10 h-10 rounded-full bg-white/90 dark:bg-black/50 border border-black/10 dark:border-white/20 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity shadow-md hover:bg-white dark:hover:bg-black/70 z-10" aria-label="Previous image">
+              <span class="material-symbols-outlined text-xl text-deep-black dark:text-white">chevron_left</span>
+            </button>
+            <button type="button" id="attire-carousel-next" class="absolute right-3 top-1/2 -translate-y-1/2 w-10 h-10 rounded-full bg-white/90 dark:bg-black/50 border border-black/10 dark:border-white/20 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity shadow-md hover:bg-white dark:hover:bg-black/70 z-10" aria-label="Next image">
+              <span class="material-symbols-outlined text-xl text-deep-black dark:text-white">chevron_right</span>
+            </button>
+            <div class="absolute bottom-3 left-1/2 -translate-x-1/2 flex gap-2 z-10">
+              <button type="button" id="attire-carousel-dot-0" class="w-2 h-2 rounded-full bg-white/90 border border-black/20 transition-all duration-300" aria-label="Show Soft Spring"></button>
+              <button type="button" id="attire-carousel-dot-1" class="w-2 h-2 rounded-full bg-white/40 border border-black/20 transition-all duration-300" aria-label="Show Spring Bright"></button>
+            </div>
           </div>
           <div class="flex flex-col gap-6">
             <h3 class="text-4xl font-light tracking-tight leading-snug">
@@ -276,6 +285,8 @@
                 class="mt-16 flex flex-col md:flex-row gap-6 justify-center items-center"
               >
                 <button
+                  id="open-moodboard-modal"
+                  type="button"
                   class="flex items-center gap-2 text-primary font-bold uppercase tracking-widest text-xs border-b border-primary/50 pb-1 hover:text-white transition-colors"
                 >
                   <span class="material-symbols-outlined text-base"
@@ -283,13 +294,175 @@
                   >
                   View Full Moodboard
                 </button>
-              
               </div>
             </div>
           </div>
         </section>
       </main>
-      
+      <div
+        id="moodboard-modal"
+        class="fixed inset-0 z-[110] hidden items-center justify-center px-6 py-10 md:py-16"
+        aria-hidden="true"
+      >
+        <div
+          id="moodboard-modal-overlay"
+          class="absolute inset-0 bg-black/50 backdrop-blur-[2px]"
+        ></div>
+        <div
+          class="relative z-10 w-full max-w-5xl rounded-2xl border border-primary/30 bg-background-light dark:bg-background-dark text-deep-black dark:text-slate-100 shadow-2xl overflow-hidden flex flex-col md:flex-row md:h-[500px]"
+          role="dialog"
+          aria-modal="true"
+          aria-labelledby="moodboard-modal-title"
+        >
+          <div class="flex-1 flex items-center justify-center px-4 md:px-10 md:py-10">
+            <div class="w-full max-w-xl">
+              <div class="grid grid-cols-4 gap-0">
+                <div
+                  class="aspect-square bg-white/80 border border-black/10 dark:border-white/10"
+                  aria-hidden="true"
+                ></div>
+                <button
+                  type="button"
+                  class="aspect-square border border-black/10 dark:border-white/10 hover:scale-[1.03] transition-transform focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 focus:ring-offset-background-light"
+                  style="background-color: #a9bda0"
+                  data-mood-id="sage"
+                ></button>
+                <div
+                  class="aspect-square bg-white/80 border border-black/10 dark:border-white/10"
+                  aria-hidden="true"
+                ></div>
+                <button
+                  type="button"
+                  class="aspect-square border border-black/10 dark:border-white/10 hover:scale-[1.03] transition-transform focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 focus:ring-offset-background-light"
+                  style="background-color: #c9b39a"
+                  data-mood-id="taupe"
+                ></button>
+                <button
+                  type="button"
+                  class="aspect-square border border-black/10 dark:border-white/10 hover:scale-[1.03] transition-transform focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 focus:ring-offset-background-light"
+                  style="background-color: #7f9f8c"
+                  data-mood-id="olive"
+                ></button>
+                <div
+                  class="aspect-square bg-white/80 border border-black/10 dark:border-white/10"
+                  aria-hidden="true"
+                ></div>
+                <button
+                  type="button"
+                  class="aspect-square border border-black/10 dark:border-white/10 hover:scale-[1.03] transition-transform focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 focus:ring-offset-background-light"
+                  style="background-color: #d1c2e0"
+                  data-mood-id="lavender"
+                ></button>
+                <div
+                  class="aspect-square bg-white/80 border border-black/10 dark:border-white/10"
+                  aria-hidden="true"
+                ></div>
+                <div
+                  class="aspect-square bg-white/80 border border-black/10 dark:border-white/10"
+                  aria-hidden="true"
+                ></div>
+                <button
+                  type="button"
+                  class="aspect-square border border-black/10 dark:border-white/10 hover:scale-[1.03] transition-transform focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 focus:ring-offset-background-light"
+                  style="background-color: #7b99d4"
+                  data-mood-id="cornflower"
+                ></button>
+                <div
+                  class="aspect-square bg-white/80 border border-black/10 dark:border-white/10"
+                  aria-hidden="true"
+                ></div>
+                <button
+                  type="button"
+                  class="aspect-square border border-black/10 dark:border-white/10 hover:scale-[1.03] transition-transform focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 focus:ring-offset-background-light"
+                  style="background-color: #f1c15f"
+                  data-mood-id="marigold"
+                ></button>
+                <button
+                  type="button"
+                  class="aspect-square border border-black/10 dark:border-white/10 hover:scale-[1.03] transition-transform focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 focus:ring-offset-background-light"
+                  style="background-color: #f3a58c"
+                  data-mood-id="soft-coral"
+                ></button>
+                <div
+                  class="aspect-square bg-white/80 border border-black/10 dark:border-white/10"
+                  aria-hidden="true"
+                ></div>
+                <button
+                  type="button"
+                  class="aspect-square border border-black/10 dark:border-white/10 hover:scale-[1.03] transition-transform focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 focus:ring-offset-background-light"
+                  style="background-color: #7a8c70"
+                  data-mood-id="moss"
+                ></button>
+                <div
+                  class="aspect-square bg-white/80 border border-black/10 dark:border-white/10"
+                  aria-hidden="true"
+                ></div>
+              </div>
+            </div>
+          </div>
+          <div class="hidden md:block w-px bg-black/10 dark:bg-white/10"></div>
+          <div
+            class="flex-1 flex flex-col justify-center px-6 py-6 md:px-10 md:py-10 bg-white/95 dark:bg-zinc-900/95 relative"
+          >
+            <button
+              id="close-moodboard-modal"
+              type="button"
+              class="absolute top-4 right-4 text-xs tracking-[0.2em] uppercase text-slate-500 hover:text-slate-900 dark:hover:text-white"
+            >
+              Close
+            </button>
+            <div class="max-w-xl h-full flex flex-col">
+              <p
+                id="moodboard-modal-title"
+                class="text-[11px] uppercase tracking-[0.3em] text-slate-500 mb-4"
+              >
+                Attire Mood Board
+              </p>
+              <h3
+                id="moodboard-color-name"
+                class="text-3xl md:text-4xl font-light tracking-tight mb-6"
+              >
+                Sage Green
+              </h3>
+              <div
+                id="moodboard-image-wrap"
+                class="flex-1 min-h-[200px] rounded-xl overflow-hidden border border-black/10 dark:border-white/10 bg-black/5 flex items-center justify-center cursor-pointer"
+              >
+                <img
+                  id="moodboard-color-image"
+                  class="w-full h-full object-contain pointer-events-none"
+                  src="Assets/mood_sage.jpg"
+                  alt="Sage Green moodboard – click to view full size"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Full-screen image lightbox -->
+    <div
+      id="image-lightbox"
+      class="fixed inset-0 z-[200] hidden items-center justify-center bg-black/90 p-4"
+      aria-hidden="true"
+      role="dialog"
+      aria-modal="true"
+      aria-label="View image full size"
+    >
+      <button
+        type="button"
+        id="image-lightbox-close"
+        class="absolute top-4 right-4 z-10 w-10 h-10 rounded-full bg-white/10 hover:bg-white/20 flex items-center justify-center text-white transition-colors"
+        aria-label="Close"
+      >
+        <span class="material-symbols-outlined">close</span>
+      </button>
+      <img
+        id="image-lightbox-img"
+        src=""
+        alt="Full size view"
+        class="max-w-full max-h-full object-contain"
+      />
     </div>
   <script>
     (function () {
@@ -313,6 +486,196 @@
       closeBtn.addEventListener("click", closeMenu);
       document.addEventListener("keydown", function (e) {
         if (e.key === "Escape") closeMenu();
+      });
+    })();
+  </script>
+  <script>
+    (function () {
+      var track = document.getElementById("attire-carousel-track");
+      var prevBtn = document.getElementById("attire-carousel-prev");
+      var nextBtn = document.getElementById("attire-carousel-next");
+      var dot0 = document.getElementById("attire-carousel-dot-0");
+      var dot1 = document.getElementById("attire-carousel-dot-1");
+      if (!track || !prevBtn || !nextBtn) return;
+      var index = 0;
+      var total = 2;
+      function updateCarousel() {
+        track.style.transform = "translateX(-" + index * 100 + "%)";
+        if (dot0) {
+          dot0.classList.toggle("bg-white/90", index === 0);
+          dot0.classList.toggle("bg-white/40", index !== 0);
+          dot0.classList.toggle("scale-125", index === 0);
+        }
+        if (dot1) {
+          dot1.classList.toggle("bg-white/90", index === 1);
+          dot1.classList.toggle("bg-white/40", index !== 1);
+          dot1.classList.toggle("scale-125", index === 1);
+        }
+      }
+      prevBtn.addEventListener("click", function (e) { e.stopPropagation(); index = (index - 1 + total) % total; updateCarousel(); });
+      nextBtn.addEventListener("click", function (e) { e.stopPropagation(); index = (index + 1) % total; updateCarousel(); });
+      if (dot0) dot0.addEventListener("click", function (e) { e.stopPropagation(); index = 0; updateCarousel(); });
+      if (dot1) dot1.addEventListener("click", function (e) { e.stopPropagation(); index = 1; updateCarousel(); });
+      var slides = document.querySelectorAll(".attire-carousel-slide");
+      for (var i = 0; i < slides.length; i++) {
+        (function (slide) {
+          slide.addEventListener("click", function () {
+            var src = slide.getAttribute("data-lightbox-src");
+            if (src && window.openImageLightbox) window.openImageLightbox(src);
+          });
+        })(slides[i]);
+      }
+    })();
+  </script>
+  <script>
+    (function () {
+      var lightbox = document.getElementById("image-lightbox");
+      var lightboxImg = document.getElementById("image-lightbox-img");
+      var lightboxClose = document.getElementById("image-lightbox-close");
+      if (!lightbox || !lightboxImg) return;
+      window.openImageLightbox = function (src) {
+        lightboxImg.src = src;
+        lightbox.classList.remove("hidden");
+        lightbox.classList.add("flex");
+        lightbox.setAttribute("aria-hidden", "false");
+        document.body.style.overflow = "hidden";
+      };
+      window.closeImageLightbox = function () {
+        lightbox.classList.add("hidden");
+        lightbox.classList.remove("flex");
+        lightbox.setAttribute("aria-hidden", "true");
+        lightboxImg.src = "";
+        document.body.style.overflow = "";
+      };
+      lightbox.addEventListener("click", function (e) {
+        if (e.target === lightbox || (e.target.closest && e.target.closest("#image-lightbox-close"))) window.closeImageLightbox();
+      });
+      if (lightboxClose) lightboxClose.addEventListener("click", window.closeImageLightbox);
+      document.addEventListener("keydown", function (e) {
+        if (e.key === "Escape") window.closeImageLightbox();
+      });
+    })();
+  </script>
+  <script>
+    (function () {
+      var openBtn = document.getElementById("open-moodboard-modal");
+      var modal = document.getElementById("moodboard-modal");
+      var overlay = document.getElementById("moodboard-modal-overlay");
+      var closeBtn = document.getElementById("close-moodboard-modal");
+      var titleEl = document.getElementById("moodboard-color-name");
+      var imageEl = document.getElementById("moodboard-color-image");
+
+      if (!openBtn || !modal || !overlay || !closeBtn || !titleEl || !imageEl) {
+        return;
+      }
+
+      var moodItems = [
+        {
+          id: "sage",
+          name: "Sage Green",
+          headerColor: "#a9bda0",
+          image: "Assets/Mood/mood_greens.jpg",
+        },
+        {
+          id: "olive",
+          name: "Olive Green",
+          headerColor: "#7f9f8c",
+          image: "Assets/Mood/mood_greens.jpg",
+        },
+        {
+          id: "taupe",
+          name: "Soft Taupe",
+          headerColor: "#c9b39a",
+          image: "Assets/Mood/mood_taupe.jpg",
+        },
+        {
+          id: "lavender",
+          name: "Soft Lavender",
+          headerColor: "#d1c2e0",
+          image: "Assets/Mood/mood_lavender.jpg",
+        },
+        {
+          id: "cornflower",
+          name: "Soft Cornflower Blue",
+          headerColor: "#7b99d4",
+          image: "Assets/Mood/mood_blue.jpg",
+        },
+        {
+          id: "marigold",
+          name: "Marigold",
+          headerColor: "#f1c15f",
+          image: "Assets/Mood/mood_marigold.jpg",
+        },
+        {
+          id: "soft-coral",
+          name: "Soft Coral",
+          headerColor: "#f3a58c",
+          image: "Assets/Mood/mood_coral.jpg",
+        },
+        {
+          id: "moss",
+          name: "Moss Green",
+          headerColor: "#7a8c70",
+          image: "Assets/Mood/mood_moss.jpg",
+        },
+      ];
+
+      function showModal() {
+        modal.classList.remove("hidden");
+        modal.classList.add("flex");
+        modal.setAttribute("aria-hidden", "false");
+      }
+
+      function hideModal() {
+        modal.classList.add("hidden");
+        modal.classList.remove("flex");
+        modal.setAttribute("aria-hidden", "true");
+      }
+
+      function setActiveMood(id) {
+        var item = null;
+        for (var i = 0; i < moodItems.length; i++) {
+          if (moodItems[i].id === id) {
+            item = moodItems[i];
+            break;
+          }
+        }
+        if (!item) return;
+        titleEl.textContent = item.name;
+        titleEl.style.color = item.headerColor;
+        imageEl.src = item.image;
+        imageEl.alt = item.name + " moodboard";
+      }
+
+      var boxes = modal.querySelectorAll("[data-mood-id]");
+      boxes.forEach
+        ? boxes.forEach(function (box) {
+            box.addEventListener("click", function () {
+              var id = box.getAttribute("data-mood-id");
+              setActiveMood(id);
+            });
+          })
+        : null;
+
+      var moodboardImageWrap = document.getElementById("moodboard-image-wrap");
+      if (moodboardImageWrap && window.openImageLightbox) {
+        moodboardImageWrap.addEventListener("click", function () {
+          if (imageEl && imageEl.src) window.openImageLightbox(imageEl.src);
+        });
+      }
+
+      openBtn.addEventListener("click", function () {
+        setActiveMood("sage");
+        showModal();
+      });
+
+      overlay.addEventListener("click", hideModal);
+      closeBtn.addEventListener("click", hideModal);
+
+      document.addEventListener("keydown", function (event) {
+        if (event.key === "Escape") {
+          hideModal();
+        }
       });
     })();
   </script>
