--- a/home.html
+++ b/home.html
@@ -22,6 +22,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
     <script id="tailwind-config">
       tailwind.config = {
         darkMode: "class",
@@ -131,7 +132,7 @@
         align-items: center;
         justify-content: center;
         background: radial-gradient(circle at center, #f8f3ee 0%, #e9dfd1 64%, #e1d5c5 100%);
-        overflow: hidden;
+        overflow: visible;
         transition: background 650ms ease;
       }
       .prelude-stage::before {
@@ -157,155 +158,191 @@
         pointer-events: none;
         transition: opacity 550ms ease;
       }
-      .prelude-card {
+      .prelude-envelope {
         position: relative;
-        width: min(94vw, 1200px);
-        height: min(78vh, 760px);
-        border-radius: 12px;
-        overflow: hidden;
-        box-shadow: 0 30px 80px rgba(0, 0, 0, 0.22);
+        width: 80vw;
+        height: 75vh;
+        perspective: 1000px;
         transform-style: preserve-3d;
-        perspective: 2400px;
-        transition:
-          width 950ms cubic-bezier(0.22, 0.7, 0.2, 1),
-          height 950ms cubic-bezier(0.22, 0.7, 0.2, 1),
-          border-radius 850ms ease,
-          box-shadow 850ms ease;
+        border-radius: 0 0 10px 10px;
+        background: linear-gradient(180deg, #d4c9ba 0%, #d0c4b5 100%);
+        box-shadow: 0 20px 50px rgba(0, 0, 0, 0.2);
+        transition: width 950ms cubic-bezier(0.22, 0.7, 0.2, 1), height 950ms cubic-bezier(0.22, 0.7, 0.2, 1), border-radius 850ms ease, box-shadow 850ms ease;
       }
-      .prelude-back {
+      .prelude-envelope-left,
+      .prelude-envelope-right {
         position: absolute;
-        inset: 0;
-        background: linear-gradient(145deg, #f7efe5 0%, #eadfce 100%);
-        z-index: 1;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        z-index: 3;
+        pointer-events: none;
+      }
+      .prelude-envelope-left::before,
+      .prelude-envelope-right::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        border-radius: 0 0 10px 10px;
+      }
+      .prelude-envelope-left::before {
+        clip-path: polygon(0 0, 100% 100%, 0 100%);
+        background: linear-gradient(165deg, #d9cfc1 0%, #d0c4b5 100%);
+        box-shadow: inset 1px 0 0 rgba(0, 0, 0, 0.06);
+      }
+      .prelude-envelope-right::before {
+        clip-path: polygon(100% 0, 100% 100%, 0 100%);
+        background: linear-gradient(195deg, #e0d5c6 0%, #d4c9ba 100%);
+      }
+      .prelude-envelope-flap {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        height: 50%;
+        transform-origin: top center;
+        transform: rotateX(0deg);
+        transition: transform 1200ms cubic-bezier(0.22, 0.7, 0.2, 1);
+        z-index: 4;
+      }
+      .prelude-envelope-flap::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        clip-path: polygon(0 0, 100% 0, 50% 100%);
+        background: linear-gradient(175deg, #e2d9cb 0%, #d4c9ba 100%);
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.12);
+        pointer-events: none;
+      }
+      body.prelude-open .prelude-envelope-flap {
+        transform: rotateX(-180deg);
       }
       .prelude-preview {
         position: absolute;
         left: 10%;
         right: 10%;
-        top: 16%;
-        bottom: 12%;
-        border-radius: 14px;
-        opacity: 0;
-        transform: translateY(18px) scale(0.82);
+        bottom: 5%;
+        height: 72%;
+        border-radius: 8px;
         background: #f4ece7 url("Assets/hero_section.png") center / cover no-repeat;
-        border: 1px solid rgba(255, 255, 255, 0.25);
-        box-shadow: 0 20px 46px rgba(0, 0, 0, 0.2);
-        transition:
-          opacity 500ms ease,
-          transform 900ms cubic-bezier(0.22, 0.7, 0.2, 1),
-          left 900ms cubic-bezier(0.22, 0.7, 0.2, 1),
-          right 900ms cubic-bezier(0.22, 0.7, 0.2, 1),
-          top 900ms cubic-bezier(0.22, 0.7, 0.2, 1),
-          bottom 900ms cubic-bezier(0.22, 0.7, 0.2, 1),
-          border-radius 900ms ease,
-          box-shadow 900ms ease;
-        z-index: 3;
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        box-shadow: 0 12px 32px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+        opacity: 0;
+        transform: translateY(0) scale(0.95);
+        transition: opacity 500ms ease 400ms, transform 800ms cubic-bezier(0.22, 0.7, 0.2, 1) 400ms;
       }
-      .prelude-front {
+      body.prelude-open .prelude-preview {
+        opacity: 1;
+        transform: translateY(-100px) scale(1);
+        transition: opacity 500ms ease 300ms, transform 1000ms cubic-bezier(0.22, 0.7, 0.2, 1) 300ms;
+      }
+      .prelude-wax-seal-wrap {
         position: absolute;
-        inset: 0;
+        bottom: 0;
+        left: 50%;
+        width: 28vmin;
+        height: 28vmin;
+        margin-left: -14vmin;
+        transform: translateY(50%);
         z-index: 5;
-        transform-origin: top center;
-        transform: perspective(1800px) rotateX(0deg);
-        transform-style: preserve-3d;
-        backface-visibility: hidden;
-        transition:
-          transform 2000ms cubic-bezier(0.22, 0.7, 0.2, 1),
-          box-shadow 1300ms ease;
+        pointer-events: none;
       }
-      .prelude-front-face,
-      .prelude-front-back {
+      .prelude-wax-seal-wrap .prelude-wax-seal {
+        pointer-events: auto;
+      }
+      .prelude-wax-blobs {
         position: absolute;
-        inset: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        filter: url(#goo);
+        z-index: 0;
+      }
+      .prelude-wax-blob {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        margin: auto;
+        width: 20vmin;
+        height: 20vmin;
+        border-radius: 50%;
+        background-color: #861C0E;
+        box-shadow: inset 0 0 1px rgba(0,0,0,0.4), inset -1px -1px 3px rgba(255,255,255,0.25);
         backface-visibility: hidden;
       }
-      .prelude-front-face {
+      .prelude-wax-blob:nth-child(1) { transform: scale(0.8) translate(-2.5vmin, -2.86vmin); }
+      .prelude-wax-blob:nth-child(2) { transform: scale(0.9) translate(2vmin, -1.25vmin); }
+      .prelude-wax-blob:nth-child(3) { transform: scale(0.7) translate(3.33vmin, 5vmin); }
+      .prelude-wax-blob:nth-child(4) { transform: scale(0.7) translate(-5vmin, 2vmin); }
+      .prelude-wax-seal {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        margin: auto;
+        width: 16vmin;
+        height: 16vmin;
+        line-height: 16vmin;
+        border-radius: 50%;
+        background-color: #6e1809;
+        box-shadow: 0 0 3px rgba(0,0,0,0.5), 0 0 6px rgba(0,0,0,0.3), inset 0 0 1px rgba(0,0,0,0.8), inset -1px -1px 3px rgba(255,255,255,0.3);
+        filter: drop-shadow(0 0 5px rgba(0,0,0,0.5));
         display: flex;
-        flex-direction: column;
         align-items: center;
         justify-content: center;
-        text-align: center;
-        padding: 30px 16px 90px;
-        color: #2f2922;
-        background:
-          radial-gradient(circle at 50% 20%, rgba(255, 255, 255, 0.35), transparent 50%),
-          linear-gradient(145deg, #f7efe5 0%, #eadfce 100%);
-      }
-      .prelude-front-face::after {
-        content: "";
-        position: absolute;
-        inset: 0;
-        background: linear-gradient(to bottom, rgba(255, 255, 255, 0.08), rgba(0, 0, 0, 0.03));
-        pointer-events: none;
-      }
-      .prelude-front-back {
-        transform: rotateX(180deg);
-        background: linear-gradient(150deg, #efe2cf 0%, #e5d3bd 100%);
-        box-shadow: inset 0 0 0 1px rgba(190, 162, 128, 0.2);
-      }
-      .prelude-title {
-        margin: 0;
-        font-family: "Newsreader", serif;
-        font-size: clamp(3.2rem, 8vw, 7.2rem);
-        line-height: 0.95;
-        font-weight: 400;
-      }
-      .prelude-subtitle {
-        margin-top: 10px;
-        font-size: clamp(0.68rem, 1.4vw, 0.92rem);
-        letter-spacing: 0.34em;
-        text-transform: uppercase;
-        opacity: 0.66;
-      }
-      .prelude-open-btn {
-        position: absolute;
-        left: 50%;
-        bottom: 28px;
-        transform: translateX(-50%);
-        border: 0;
-        background: transparent;
-        color: #3b3229;
-        font-family: "Newsreader", serif;
-        letter-spacing: 0.28em;
-        text-transform: uppercase;
-        font-size: 12px;
-        display: inline-flex;
-        align-items: center;
-        gap: 8px;
         cursor: pointer;
-        z-index: 9;
+        z-index: 1;
+        border: 0;
+        padding: 0;
+        font-family: "Rock Salt", cursive;
+        font-size: 4vmin;
+        color: rgba(0,0,0,0.6);
+        text-shadow: 0 1px 1px rgba(255,255,255,0.2);
+        transition: opacity 250ms ease, transform 200ms ease;
       }
-      .prelude-open-btn .arrow {
-        font-size: 17px;
-      }
-      body.prelude-opening .prelude-open-btn {
-        opacity: 0;
-        pointer-events: none;
-        transition: opacity 250ms ease;
-      }
-      body.prelude-opening .prelude-front {
-        transform: perspective(1800px) rotateX(178deg) scaleX(1.02);
-        box-shadow: 0 22px 40px rgba(0, 0, 0, 0.18);
-      }
-      body.prelude-opening .prelude-preview {
-        opacity: 1;
-        transform: translateY(0) scale(1);
+      .prelude-wax-seal:focus {
+        outline: none;
+        box-shadow: 0 0 3px rgba(0,0,0,0.5), 0 0 6px rgba(0,0,0,0.3), inset 0 0 1px rgba(0,0,0,0.8), inset -1px -1px 3px rgba(255,255,255,0.3), 0 0 0 3px rgba(255,255,255,0.4);
       }
       body.prelude-expanding .prelude-preview {
         left: 0;
         right: 0;
         top: 0;
         bottom: 0;
+        height: auto;
         border-radius: 0;
         transform: none;
         box-shadow: none;
-        backdrop-filter: blur(0);
+        transition: left 900ms cubic-bezier(0.22, 0.7, 0.2, 1), right 900ms cubic-bezier(0.22, 0.7, 0.2, 1), top 900ms cubic-bezier(0.22, 0.7, 0.2, 1), bottom 900ms cubic-bezier(0.22, 0.7, 0.2, 1), border-radius 900ms ease, box-shadow 900ms ease;
       }
-      body.prelude-expanding .prelude-card {
+      body.prelude-expanding .prelude-envelope {
         width: 100vw;
         height: 100vh;
         border-radius: 0;
+        background: transparent;
         box-shadow: none;
+      }
+      body.prelude-expanding .prelude-envelope-flap,
+      body.prelude-expanding .prelude-envelope-left,
+      body.prelude-expanding .prelude-envelope-right {
+        opacity: 0;
+        pointer-events: none;
+        transition: opacity 400ms ease;
+      }
+      body.prelude-expanding .prelude-preview {
+        z-index: 10;
       }
       body.prelude-fadeout .prelude-overlay {
         opacity: 0;
@@ -315,21 +352,34 @@
   <body
     class="prelude-locked bg-background-light dark:bg-background-dark text-deep-black dark:text-slate-100 antialiased overflow-x-hidden"
   >
+    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" style="position:absolute;width:0;height:0;">
+      <defs>
+        <filter id="goo">
+          <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
+          <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
+          <feBlend in="SourceGraphic" in2="goo" operator="atop" />
+        </filter>
+      </defs>
+    </svg>
     <div id="prelude-overlay" class="prelude-overlay" aria-hidden="true">
       <div class="prelude-stage">
-        <div class="prelude-card">
-          <div class="prelude-back"></div>
-          <div class="prelude-preview"></div>
-          <div class="prelude-front">
-            <div class="prelude-front-face">
-              <h1 class="text-5xl sm:text-7xl md:text-9xl great-vibes-regular mb-4">Keagile &amp; Babo</h1>
-              <p class="prelude-subtitle">A Celebration of Love</p>
+        <div class="prelude-envelope" id="prelude-envelope">
+          <div class="prelude-preview" role="img" aria-label="Wedding invitation"></div>
+          <div class="prelude-envelope-flap" aria-hidden="true">
+            <div class="prelude-wax-seal-wrap">
+              <div class="prelude-wax-blobs">
+                <span class="prelude-wax-blob" aria-hidden="true"></span>
+                <span class="prelude-wax-blob" aria-hidden="true"></span>
+                <span class="prelude-wax-blob" aria-hidden="true"></span>
+                <span class="prelude-wax-blob" aria-hidden="true"></span>
+              </div>
+              <button id="prelude-open-btn" class="prelude-wax-seal" type="button" aria-label="Open envelope">
+                B&amp;K
+              </button>
             </div>
-            <div class="prelude-front-back" aria-hidden="true"></div>
           </div>
-          <button id="prelude-open-btn" class="prelude-open-btn" type="button">
-            Open Invitation <span class="arrow">↓</span>
-          </button>
+          <div class="prelude-envelope-left" aria-hidden="true"></div>
+          <div class="prelude-envelope-right" aria-hidden="true"></div>
         </div>
       </div>
     </div>
@@ -917,6 +967,7 @@ On 05 January 2025, beneath the golden wash of a Mauritian sunset, their story t
           hasSeenPrelude = false;
         }
         window.hasSeenPrelude = hasSeenPrelude;
+        hasSeenPrelude = false;
 
         if (hasSeenPrelude) {
           overlay.remove();
@@ -956,18 +1007,18 @@ On 05 January 2025, beneath the golden wash of a Mauritian sunset, their story t
           } catch (error) {
             // no-op: continue animation even if storage is unavailable
           }
-          body.classList.add("prelude-opening");
+          body.classList.add("prelude-open");
           window.setTimeout(function () {
             body.classList.add("prelude-expanding");
-          }, 1200);
-          window.setTimeout(function () {
-            body.classList.add("prelude-fadeout");
           }, 1800);
           window.setTimeout(function () {
+            body.classList.add("prelude-fadeout");
+          }, 2700);
+          window.setTimeout(function () {
             overlay.remove();
-            body.classList.remove("prelude-locked");
+            body.classList.remove("prelude-locked", "prelude-open", "prelude-expanding", "prelude-fadeout");
             playHeroVideo();
-          }, 2300);
+          }, 3200);
         }
 
         openBtn.addEventListener("click", startPrelude);
