--- a/home.html
+++ b/home.html
@@ -74,6 +74,24 @@
         backdrop-filter: blur(10px);
         -webkit-backdrop-filter: blur(10px);
         box-shadow: 0 16px 40px rgba(0, 0, 0, 0.3);
+        transition: background 0.3s ease, border-color 0.3s ease, box-shadow 0.3s ease, color 0.3s ease;
+      }
+      .glass-header.header-past-hero {
+        background: #ffffff;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+      }
+      .glass-header.header-past-hero,
+      .glass-header.header-past-hero .material-symbols-outlined,
+      .glass-header.header-past-hero h2,
+      .glass-header.header-past-hero nav {
+        color: #111111;
+      }
+      .glass-header.header-past-hero nav a {
+        color: rgba(17, 17, 17, 0.8);
+      }
+      .glass-header.header-past-hero nav a:hover {
+        color: #111111;
       }
       .letter-spacing-widest {
         letter-spacing: 0.25em;
@@ -191,12 +209,13 @@
       }
       .prelude-envelope-left::before {
         clip-path: polygon(0 0, 100% 100%, 0 100%);
-        background: linear-gradient(165deg, #d9cfc1 0%, #d0c4b5 100%);
-        box-shadow: inset 1px 0 0 rgba(0, 0, 0, 0.06);
+        background: linear-gradient(165deg, #d0c4b5 0%, #c6b8a6 100%);
+        box-shadow: inset 1px 0 0 rgba(0, 0, 0, 0.22);
       }
       .prelude-envelope-right::before {
         clip-path: polygon(100% 0, 100% 100%, 0 100%);
-        background: linear-gradient(195deg, #e0d5c6 0%, #d4c9ba 100%);
+        background: linear-gradient(195deg, #d4c9ba 0%, #c8baa8 100%);
+        box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.22);
       }
       .prelude-envelope-flap {
         position: absolute;
@@ -232,7 +251,7 @@
         height: 72%;
         border-radius: 8px;
         background: #f4ece7 url("Assets/hero_section.png") center / cover no-repeat;
-        border: 1px solid rgba(255, 255, 255, 0.3);
+        border: 1px solid rgba(0, 0, 0, 0.12);
         box-shadow: 0 12px 32px rgba(0, 0, 0, 0.2);
         z-index: 1;
         opacity: 0;
@@ -385,7 +404,8 @@
     </div>
     <!-- Main Hero Container -->
     <div
-      class="relative min-h-screen w-full flex flex-col items-center justify-between"
+      id="hero-section"
+      class="relative min-h-screen w-full flex flex-col items-center"
     >
       <!-- Background Layer with Calm Ocean Waves (no overlay - blue shows through) -->
       <div class="absolute inset-0 z-0 overflow-hidden">
@@ -402,10 +422,12 @@
         >
         </video>
       </div>
+      <!-- Spacer for fixed navbar so content never sits under it -->
+      <div class="w-full shrink-0 h-20 md:h-24" aria-hidden="true"></div>
       <!-- Minimalist Navigation Bar -->
       <header
+        id="main-header"
         class="fixed top-0 left-0 right-0 z-50 w-full px-8 md:px-20 py-8 flex items-center justify-between glass-header text-white"
-
       >
         <div class="flex items-center gap-2">
           <span class="material-symbols-outlined text-white scale-75"
@@ -454,62 +476,57 @@
           <a href="attire.html" class="hover:text-deep-black transition-colors">Attire</a>
         </nav>
       </div>
-      <!-- Cinematic Center Content -->
-      <main
-        class="relative z-20 flex-1 flex flex-col items-center justify-center text-center px-6 max-w-5xl"
-      >
-        <div class="">
-          <!-- Top Line -->
-          <div class="animate-fade-in">
-            <p
-              class="text-[10px] md:text-xs uppercase tracking-[0.4em] font-medium text-white mb-4"
-            >
-              Together with their families
-            </p>
-          </div>
-          <!-- Main Names -->
-          <div class="space-y-8 great-vibes-regular leading-[1.1] italic">
-            <h1
-              class="text-6xl my-6 md:text-8xl lg:text-9xl font-extralight tracking-tight text-deep-black italic leading-[0.9]"
-            >
-              Keagile
-              <span
-                class="text-4xl md:text-6xl lg:text-7xl align-middle not-italic font-thin mx-2 text-pink"
-                >&amp;</span
+      <!-- Hero content + scroll hint as one block with consistent gap -->
+      <div class="relative z-20 flex-1 flex flex-col items-center justify-center w-full gap-[10vh] pb-8 md:pb-10">
+        <!-- Cinematic Center Content -->
+        <main class="flex flex-col items-center justify-center text-center px-6 max-w-5xl">
+          <div>
+            <!-- Top Line -->
+            <div class="animate-fade-in">
+              <p
+                class="text-[10px] md:text-xs uppercase tracking-[0.4em] font-medium text-white mb-4"
               >
-              Babo
-            </h1>
+                Together with their families
+              </p>
+            </div>
+            <!-- Main Names -->
+            <div class="space-y-8 great-vibes-regular leading-[1.1] italic">
+              <h1
+                class="text-6xl my-6 md:text-8xl lg:text-9xl font-extralight tracking-tight text-deep-black italic leading-[0.9]"
+              >
+                Keagile
+                <span
+                  class="text-4xl md:text-6xl lg:text-7xl align-middle not-italic font-thin mx-2 text-pink"
+                  >&amp;</span
+                >
+                Babo
+              </h1>
+            </div>
+            <!-- Subheading & Date -->
+            <div class="space-y-2 max-w-2xl mx-auto">
+              <p
+                class="text-lg md:text-xl font-light text-white leading-relaxed italic"
+              >
+                Invite you to celebrate their union
+              </p>
+              <div class="w-12 h-[1px] bg-primary mx-auto my-6"></div>
+            </div>
+            <!-- Primary CTA -->
+            <div class="pt-8">
+              <a
+                  href="venue.html"
+                  class="group relative inline-flex items-center justify-center px-10 py-4 bg-pink text-deep-black text-xs font-bold uppercase tracking-[0.2em] rounded-none transition-all duration-300 hover:bg-taupe hover:text-white border border-taupe/30"
+              >
+                  <span class="relative z-10">Enter Our Celebration</span>
+                  <div
+                      class="absolute inset-0 border border-taupe translate-x-1 translate-y-1 opacity-50 hover:border-champagne group-hover:translate-x-0 group-hover:translate-y-0 transition-transform duration-300"
+                  ></div>
+              </a>
+            </div>
           </div>
-          <!-- Subheading & Date -->
-          <div class="space-y-2 max-w-2xl mx-auto">
-            <p
-              class="text-lg md:text-xl font-light text-white leading-relaxed italic"
-            >
-              Invite you to celebrate their union
-            </p>
-            <div class="w-12 h-[1px] bg-primary mx-auto my-6"></div>
-          </div>
-          <!-- Primary CTA -->
-          <div class="pt-8">
-            <a
-                href="venue.html"
-                class="group relative inline-flex items-center justify-center px-10 py-4 bg-pink text-deep-black text-xs font-bold uppercase tracking-[0.2em] rounded-none transition-all duration-300 hover:bg-taupe hover:text-white border border-taupe/30"
-            >
-                <span class="relative z-10">Enter Our Celebration</span>
-                <div
-                    class="absolute inset-0 border border-taupe translate-x-1 translate-y-1 opacity-50 hover:border-champagne group-hover:translate-x-0 group-hover:translate-y-0 transition-transform duration-300"
-                ></div>
-            </a>
-          </div>
-        </div>
-      </main>
-      <!-- Scroll Indicator / Footer Component -->
-      <footer
-        class="relative z-20 w-full py-12 flex flex-col items-center gap-4"
-      >
-        <div
-          class="flex flex-col items-center gap-2  group cursor-pointer"
-        >
+        </main>
+        <!-- Scroll Indicator -->
+        <footer class="flex flex-col items-center gap-2 group cursor-pointer shrink-0">
           <p
             class="text-[9px] uppercase tracking-[0.3em] font-bold text-white transition-colors"
           >
@@ -518,8 +535,8 @@
           <div class="h-12 w-[2px] bg-primary relative overflow-hidden">
             <div class="absolute top-0 left-0 w-full h-1/2 bg-primary"></div>
           </div>
-        </div>
-      </footer>
+        </footer>
+      </div>
     </div>
     <!-- Split Screen Editorial Layout -->
     <section class="flex flex-col md:flex-row min-h-screen w-full">
@@ -1028,6 +1045,26 @@ On 05 January 2025, beneath the golden wash of a Mauritian sunset, their story t
             startPrelude();
           }
         });
+      })();
+    </script>
+    <script>
+      (function () {
+        var hero = document.getElementById("hero-section");
+        var header = document.getElementById("main-header");
+        if (!hero || !header) return;
+        var observer = new IntersectionObserver(
+          function (entries) {
+            entries.forEach(function (entry) {
+              if (entry.isIntersecting) {
+                header.classList.remove("header-past-hero");
+              } else {
+                header.classList.add("header-past-hero");
+              }
+            });
+          },
+          { threshold: 0, rootMargin: "0px 0px 0px 0px" }
+        );
+        observer.observe(hero);
       })();
     </script>
   </body>
