--- a/home.html
+++ b/home.html
@@ -142,6 +142,7 @@
         z-index: 9999;
         opacity: 1;
         transition: opacity 500ms ease;
+        overflow: hidden;
       }
       .prelude-stage {
         position: absolute;
@@ -182,10 +183,43 @@
         height: 75vh;
         perspective: 1000px;
         transform-style: preserve-3d;
+        transition: width 950ms cubic-bezier(0.22, 0.7, 0.2, 1), height 950ms cubic-bezier(0.22, 0.7, 0.2, 1), border-radius 850ms ease, box-shadow 850ms ease;
+      }
+      .prelude-envelope-drop-back,
+      .prelude-envelope-drop-front,
+      .prelude-envelope-drop-flap {
+        position: absolute;
+        inset: 0;
+        transition: transform 1400ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+      }
+      .prelude-envelope-drop-back {
+        z-index: 0;
+      }
+      body.prelude-dropping .prelude-envelope-drop-back,
+      body.prelude-dropping .prelude-envelope-drop-front,
+      body.prelude-dropping .prelude-envelope-drop-flap {
+        transform: translateY(65vh);
+      }
+      .prelude-envelope-drop-front {
+        z-index: 3;
+        pointer-events: none;
+      }
+      .prelude-envelope-drop-flap {
+        z-index: 4;
+        pointer-events: none;
+      }
+      .prelude-envelope-drop-flap .prelude-envelope-flap {
+        pointer-events: auto;
+      }
+      body.prelude-open .prelude-envelope-drop-flap {
+        z-index: 0;
+      }
+      .prelude-envelope-body {
+        position: absolute;
+        inset: 0;
         border-radius: 0 0 10px 10px;
         background: linear-gradient(180deg, #d4c9ba 0%, #d0c4b5 100%);
         box-shadow: 0 20px 50px rgba(0, 0, 0, 0.2);
-        transition: width 950ms cubic-bezier(0.22, 0.7, 0.2, 1), height 950ms cubic-bezier(0.22, 0.7, 0.2, 1), border-radius 850ms ease, box-shadow 850ms ease;
       }
       .prelude-envelope-left,
       .prelude-envelope-right {
@@ -350,8 +384,12 @@
         width: 100vw;
         height: 100vh;
         border-radius: 0;
-        background: transparent;
-        box-shadow: none;
+      }
+      body.prelude-expanding .prelude-envelope-drop-back,
+      body.prelude-expanding .prelude-envelope-drop-front,
+      body.prelude-expanding .prelude-envelope-drop-flap {
+        pointer-events: none;
+        visibility: hidden;
       }
       body.prelude-expanding .prelude-envelope-flap,
       body.prelude-expanding .prelude-envelope-left,
@@ -383,22 +421,29 @@
     <div id="prelude-overlay" class="prelude-overlay" aria-hidden="true">
       <div class="prelude-stage">
         <div class="prelude-envelope" id="prelude-envelope">
+          <div class="prelude-envelope-drop-back">
+            <div class="prelude-envelope-body" aria-hidden="true"></div>
+          </div>
           <div class="prelude-preview" role="img" aria-label="Wedding invitation"></div>
-          <div class="prelude-envelope-flap" aria-hidden="true">
-            <div class="prelude-wax-seal-wrap">
-              <div class="prelude-wax-blobs">
-                <span class="prelude-wax-blob" aria-hidden="true"></span>
-                <span class="prelude-wax-blob" aria-hidden="true"></span>
-                <span class="prelude-wax-blob" aria-hidden="true"></span>
-                <span class="prelude-wax-blob" aria-hidden="true"></span>
+          <div class="prelude-envelope-drop-front">
+            <div class="prelude-envelope-left" aria-hidden="true"></div>
+            <div class="prelude-envelope-right" aria-hidden="true"></div>
+          </div>
+          <div class="prelude-envelope-drop-flap">
+            <div class="prelude-envelope-flap" aria-hidden="true">
+              <div class="prelude-wax-seal-wrap">
+                <div class="prelude-wax-blobs">
+                  <span class="prelude-wax-blob" aria-hidden="true"></span>
+                  <span class="prelude-wax-blob" aria-hidden="true"></span>
+                  <span class="prelude-wax-blob" aria-hidden="true"></span>
+                  <span class="prelude-wax-blob" aria-hidden="true"></span>
+                </div>
+                <button id="prelude-open-btn" class="prelude-wax-seal" type="button" aria-label="Open envelope">
+                  B&amp;K
+                </button>
               </div>
-              <button id="prelude-open-btn" class="prelude-wax-seal" type="button" aria-label="Open envelope">
-                B&amp;K
-              </button>
             </div>
           </div>
-          <div class="prelude-envelope-left" aria-hidden="true"></div>
-          <div class="prelude-envelope-right" aria-hidden="true"></div>
         </div>
       </div>
     </div>
@@ -1026,16 +1071,19 @@ On 05 January 2025, beneath the golden wash of a Mauritian sunset, their story t
           }
           body.classList.add("prelude-open");
           window.setTimeout(function () {
+            body.classList.add("prelude-dropping");
+          }, 1300);
+          window.setTimeout(function () {
             body.classList.add("prelude-expanding");
-          }, 1800);
+          }, 2800);
           window.setTimeout(function () {
             body.classList.add("prelude-fadeout");
-          }, 2700);
+          }, 3800);
           window.setTimeout(function () {
             overlay.remove();
-            body.classList.remove("prelude-locked", "prelude-open", "prelude-expanding", "prelude-fadeout");
+            body.classList.remove("prelude-locked", "prelude-open", "prelude-dropping", "prelude-expanding", "prelude-fadeout");
             playHeroVideo();
-          }, 3200);
+          }, 4400);
         }
 
         openBtn.addEventListener("click", startPrelude);
